--- a/_config/fieldsets/page-gallery.yaml
+++ b/_config/fieldsets/page-gallery.yaml
@@ -1,4 +1,5 @@
-title: Page With Sidebar
+title: Gallery Page
+hide: yes
 
 fields:
   
@@ -10,15 +11,15 @@ fields:
   meta_description:
     type: text
     display: Meta Description
-    
+  
+  hide_thumbnail_captions:
+    type: checkbox
+    display: Hide Thumbnail Captions?
+    default: 0
+         
   content:
-    type: markitup
-    display: Main Content
-    
-  sidebar:
-    type: markitup
-    display: Sidebar Content
+    type: hidden
     
   _template:
     type: hidden
-    default: page-sidebar
+    default: page-gallery
