--- a/_themes/hawthorne/.gitignore
+++ b/_themes/hawthorne/.gitignore
@@ -2,3 +2,25 @@
 /.sass-cache/*
 *.DS_Store
 /stylesheets/*
+
+
+node_modules
+
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Statamic files #
+######################
+_cache/*
+_cache
+!_cache/index.html
+_logs/*
+_logs
+!_logs/index.html
