--- a/_themes/hawthorne/bower.json
+++ b/_themes/hawthorne/bower.json
@@ -4,5 +4,10 @@
   "private": "true",
   "dependencies": {
     "foundation": "zurb/bower-foundation#~5.5.1"
+  },
+  "devDependencies": {
+    "jquery": "~2.1.3",
+    "modernizr": "~2.8.3",
+    "foundation": "~5.5.1"
   }
 }
