Set dashboard to false in config settings.

--- a/_config/settings.yaml
+++ b/_config/settings.yaml
@@ -170,7 +170,7 @@ _admin_theme: ascent
 
 # Customize which pages show in the control panel
 _admin_nav:
-  dashboard: true
+  dashboard: false
   pages:     true
   members:   true
   account:   true
