Edited settings in fieldsets - commented out social icons code.

--- a/_config/fieldsets/settings.yaml
+++ b/_config/fieldsets/settings.yaml
@@ -72,14 +72,14 @@ fields:
     display: Footer HTML
     instructions: Reference - typeandgrids.com/reference/footer.txt
 
-  social_icons:
-    type: textarea
-    display: Footer Social Icons
-    instructions: Reference - typeandgrids.com/reference/social_icons.txt
+  # social_icons:
+  #   type: textarea
+  #   display: Footer Social Icons
+  #   instructions: Reference - typeandgrids.com/reference/social_icons.txt
 
-  analytics_code:
-    type: textarea
-    display: Analytics Code
+  # analytics_code:
+  #   type: textarea
+  #   display: Analytics Code
 
   content:
     type: hidden
