Commented out facebook code.

--- a/_config/settings.yaml
+++ b/_config/settings.yaml
@@ -21,7 +21,7 @@ _language: en
 _site_root: /
 
 # Name of your site
-_site_name: Late Shapes
+_site_name: Leslie_Strauss
 
 # Change the folder name for your content directory
 _content_root: _content
@@ -42,7 +42,7 @@ _date_format: 'F j, Y'
 _time_format: 'g:i.s a'
 
 # Timezone
-_timezone: America/Portland
+_timezone: America/San_Francisco
 # _timezone: America/New_York
 
 # List of desired taxonomy triggers
